<resources>
    <string name="app_name">TLC</string>
    <string name="login">เข้าสู้ระบบ</string>
    <string name="user">ชื่อผู้ใช้:</string>
    <string name="StdNo">รหัสนักศึกษา</string>
    <string name="Remember">จดจำไว้</string>
    <string name="IdNo">เลขบัตรประชาชน</string>
    <string name="pass">รหัสผ่าน:</string>
    <string name="Sub1">เลข</string>
    <string name="Sub2">อังกฤษ</string>
    <string name="Sub3">ไทย</string>
    <string name="Sub4">วิท</string>
    <string name="Sub5">สังคม</string>
    <string name="Sub6">โปรแกรม</string>
    <string name="Menus">เมนูหลัก</string>
    <string name="Ans1">ตัวเลือกที่ 1</string>
    <string name="Ans2">ตัวเลือกที่ 2</string>
    <string name="Ans3">ตัวเลือกที่ 3</string>
    <string name="Ans4">ตัวเลือกที่ 4</string>
    <string name="Question">คำถาม ?</string>
    <string name="SelectRightAnswer">เลือกคำตอบที่ถูกต้อง?</string>
</resources>
