<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tlc.kkcc_pk.app01.MainActivity"
    android:background="@drawable/wallpapers_a_02">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="60dp"
        android:id="@+id/LinearLayOut01"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:background="#c9ffffff">

        <ImageView
            app:srcCompat="@drawable/logo_tlc"
            android:id="@+id/ImageLogo"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_width="140dp"
            android:layout_height="140dp" />

        <TextView
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LUser"
            android:layout_weight="1.82"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:freezesText="true"
            android:keepScreenOn="false"
            android:hint="@string/StdNo"
            android:inputType="number"
            android:id="@+id/usernameEditText" />

        <TextView
            android:text="@string/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LPassword"
            android:layout_weight="1"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textSize="18sp" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_weight="1"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:password="true"
            android:phoneNumber="?attr/windowActionBar"
            android:hint="@string/IdNo"
            android:inputType="number" />

        <CheckBox
            android:text="@string/Remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/remeberCheckBox" />

        <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#f7f7f7"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:id="@+id/loginButton" />
    </LinearLayout>

</RelativeLayout>
